--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,17 +6,72 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <TextView
-        android:id="@+id/text_home"
+    <LinearLayout
+        android:id="@+id/addFirstGardenLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="10dp"
+        android:layout_marginTop="80dp"
+        >
+
+        <ImageView
+            android:id="@+id/addGardenIV"
+            android:layout_width="162dp"
+            android:layout_height="147dp"
+            android:src="@drawable/sprout"
+            android:layout_marginBottom="17dp"
+         />
+
+        <TextView
+            android:id="@+id/addGardenTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="اولین باغ خود را اضافه کنید"
+            tools:layout_editor_absoluteX="169dp"
+            tools:layout_editor_absoluteY="163dp"
+            android:textSize="28sp"
+            android:fontFamily="@font/baseet"
+            />
+    </LinearLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
+        app:layout_constraintTop_toBottomOf="@id/addFirstGardenLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
+        >
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/dailyInsightsLayout"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
+        <LinearLayout
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:elevation="10dp"
+            android:gravity="center"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="آبیاری فروردین"
+                android:textSize="25sp"
+                android:fontFamily="@font/baseet"
+                />
+        </LinearLayout>
+    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
