garden register actvity 2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="main_green">#00c853</color>
+    <color name="main_green">#0E9145</color>
     <color name="second_green">#00e676</color>
 </resources>
