--- a/app/src/main/res/layout/activity_add_garden.xml
+++ b/app/src/main/res/layout/activity_add_garden.xml
@@ -4,128 +4,91 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddGardenActivity"
+    tools:context=".addgarden.AddGardenActivity"
     android:background="@color/main_green"
 
     >
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sprout_white"
         android:layout_marginTop="60dp"
         />
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/baseet"
-        android:text="افزودن باغ جدید"
-        android:textSize="44sp"
-        android:textColor="@color/white"
+        android:orientation="horizontal"
+        android:id="@+id/addGardenTitleLO"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:id="@+id/TVAddGarden"
+        android:padding="10dp"
+        >
+
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"
+            style="@style/titleTexts"
+            android:textColor="@color/main_green"
+            android:id="@+id/counterTV"
+            android:text="1"
+            android:background="@drawable/et_back"
+            android:textAlignment="center"
+            android:padding="2dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/sina"
+            android:text="افزودن باغ جدید"
+            android:textSize="27sp"
+            android:textColor="@color/white"
+            android:id="@+id/TVAddGarden"
+            app:layout_constraintBottom_toTopOf="@id/addGardenPager"
+            android:layout_marginStart="5dp"
+            />
+
+
+
+    </LinearLayout>
+
+
+    <androidx.viewpager2.widget.ViewPager2
+        app:layout_constraintTop_toBottomOf="@id/addGardenTitleLO"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:id="@+id/addGardenPager"
+        android:orientation="vertical"
+        android:layout_marginTop="15dp"
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/gardenRegister1"
-        app:layout_constraintTop_toBottomOf="@id/TVAddGarden"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical"
-        android:paddingStart="50dp"
-        android:paddingEnd="50dp"
-        android:layout_marginTop="35dp"
-        android:visibility="gone"
-        >
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@drawable/et_back"
-            android:hint="نام باغ"
-            android:textColor="@color/main_green"
-            android:textAlignment="center"
-            android:id="@+id/gardenNameET"
-            style="@style/titleTexts"
-            android:layout_margin="8dp"
-            android:elevation="5dp"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@drawable/et_back"
-            android:hint="متوسط سن درختان"
-            android:textColor="@color/main_green"
-            android:textAlignment="center"
-            style="@style/titleTexts"
-            android:id="@+id/gardenAgeET"
-            android:layout_margin="8dp"
-            android:elevation="5dp"
-            android:inputType="number"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/gardenRegister2"
-        app:layout_constraintTop_toBottomOf="@id/TVAddGarden"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical"
-        android:paddingStart="50dp"
-        android:paddingEnd="50dp"
-        android:layout_marginTop="35dp"
-        android:visibility="visible"
-        >
-
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@drawable/et_back"
-            android:textAlignment="textEnd"
-            android:tooltipText="@string/user"
-
-            />
-    </LinearLayout>
-
     <Button
-        android:layout_width="160dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
-        android:id="@+id/gardenRigisterNextBtn"
-        android:text="بعدی"
+        android:id="@+id/nextButton"
         android:textColor="@color/main_green"
-        style="@style/titleTexts"
         android:background="@drawable/et_back"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addGardenPager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="40dp"
-    />
-    <Button
-        android:layout_width="160dp"
-        android:layout_height="70dp"
-        android:id="@+id/gardenRigisterFinishBtn"
-        android:text="پایان"
-        android:textColor="@color/main_green"
+        android:text="@string/next"
         style="@style/titleTexts"
-        android:background="@drawable/et_back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="40dp"
-        android:visibility="invisible"
-    />
+        android:textSize="23sp"
+        android:elevation="3dp"
+        android:layout_margin="15dp"
+        android:gravity="center"
+        android:padding="1dp"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
