--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,15 @@
         <item name="fontFamily">@font/baseet</item>
     </style>
     <style name="titleTexts">
-        <item name="android:textSize">34sp</item>
-        <item name="android:fontFamily">@font/baseet</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/sina</item>
+    </style>
+
+    <style name="planttype">
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/sina</item>
+        <item name="android:textColor">@color/main_green</item>
     </style>
 </resources>
