--- a/app/src/main/res/layout/activity_add_garden.xml
+++ b/app/src/main/res/layout/activity_add_garden.xml
@@ -31,8 +31,8 @@
         >
 
         <TextView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_marginEnd="5dp"
             style="@style/titleTexts"
             android:textColor="@color/main_green"
@@ -84,11 +84,22 @@
         style="@style/titleTexts"
         android:textSize="23sp"
         android:elevation="3dp"
-        android:layout_margin="15dp"
+        android:layout_margin="60dp"
         android:gravity="center"
         android:padding="1dp"
         />
 
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/tree"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:alpha="0.5"
+        android:visibility="gone"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
