--- a/app/src/main/res/layout/fragment_add_garden.xml
+++ b/app/src/main/res/layout/fragment_add_garden.xml
@@ -25,13 +25,26 @@
             android:paddingEnd="10dp"
             android:paddingStart="10dp"
             android:textColor="@color/main_green"
-            android:maxLines="1"
+            android:singleLine="true"
+            android:maxLength="15"
+            />
+
+        <Spinner
+            android:layout_width="250dp"
+            android:layout_height="70dp"
+            android:id="@+id/gardenAreaSpinner"
+            app:layout_constraintTop_toBottomOf="@id/gardenNameET"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="30dp"
+            android:background="@drawable/et_back"
+            android:elevation="3dp"
             />
 
         <EditText
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/gardenNameET"
+            app:layout_constraintTop_toBottomOf="@id/gardenAreaSpinner"
             android:layout_width="250dp"
             android:layout_height="70dp"
             android:background="@drawable/et_back"
@@ -47,8 +60,10 @@
             android:paddingStart="10dp"
             android:textColor="@color/main_green"
             android:maxLines="1"
-
+            android:lines="1"
             />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
