--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,7 +28,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.smartfarming.ui.notifications.NotificationsFragment"
+        android:name="com.example.smartfarming.ui.user.UserProfileFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
     <fragment
