Add Activities:  - Irrigation screen  - Fertilization screen  - ViewModel  - Navigation  - NavGraph

--- a/app/src/main/res/layout/fragment_add_garden3.xml
+++ b/app/src/main/res/layout/fragment_add_garden3.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".addgarden.AddGardenFragment3"
+    tools:context=".ui.addgarden.AddGardenFragment3"
     android:padding="20dp"
     >
 
