--- a/app/src/main/res/layout/fragment_add_garden2.xml
+++ b/app/src/main/res/layout/fragment_add_garden2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".addgarden.AddGardenFragment2"
+    tools:context=".ui.addgarden.AddGardenFragment2"
     android:layout_gravity="center">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
