--- a/app/src/main/res/layout/fragment_add_garden4.xml
+++ b/app/src/main/res/layout/fragment_add_garden4.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".addgarden.AddGardenFragment4">
+    tools:context=".ui.addgarden.AddGardenFragment4">
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
