--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SmartFarming" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.SmartFarming" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#FFF</item>
         <item name="colorPrimaryVariant">@color/main_green</item>
@@ -9,6 +9,8 @@
         <item name="colorSecondary">@color/main_green</item>
         <item name="colorSecondaryVariant">@color/second_green</item>
         <item name="colorOnSecondary">@color/white</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
